@@ -1,0 +1,2 @@
+*.log
+Poisson
